src/test/ui/issues/issue-7061.stderr
error[E0308]: mismatched types
  --> $DIR/issue-7061.rs:4:46
   |
LL |     fn foo(&'a mut self) -> Box<BarStruct> { self }
   |                             --------------   ^^^^ expected struct `std::boxed::Box`, found `&mut BarStruct`
   |                             |
   |                             expected `std::boxed::Box<BarStruct>` because of return type
   |
   = note:         expected struct `std::boxed::Box<BarStruct>`
           found mutable reference `&'a mut BarStruct`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
